--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -61,8 +62,8 @@
   },
   "lint-staged": {
     "*.{ts, tsx}": [
-      "eslint './src/**/*.{ts,tsx}' --fix",
       "prettier --write",
+      "eslint './src/**/*.{ts,tsx}' --fix --quiet --cache",
       "git add"
     ]
   }
